--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
-log/*.log
-tmp/*
-tmp/**/*
+.bundle/
+.idea/
+log/
+tmp/
 doc/api
 doc/app
 db/*.sqlite3
 db/*.sqlite3-journal
-*.swp
-*~
-.DS_Store
-.idea/*
-.bundle/*
 capybara-*.html
 
