Add node_redis to socket.io server

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "app/node.js/socket.io"]
 	path = app/node.js/socket.io
 	url = git://github.com/LearnBoost/Socket.IO-node.git
+[submodule "app/node.js/node_redis"]
+	path = app/node.js/node_redis
+	url = git://github.com/mranney/node_redis.git
