Modify node server to allow it's use in tesing environment
 * Add support for Redis host/port/db change through ENV
 * Switch back to serving Redis through inet socket instead of unix

--- a/config/redis-test.conf
+++ b/config/redis-test.conf
@@ -2,8 +2,8 @@
 
 dir ./
 daemonize no
-port 0
-unixsocket tmp/sockets/redis-test.sock
+port 6380
+bind 127.0.0.1
 loglevel verbose
 logfile stdout
 syslog-enabled no
