moved warning above testing, changed redis test config to run on 0.2.1

--- a/config/redis-test.conf
+++ b/config/redis-test.conf
@@ -6,7 +6,7 @@ port 6380
 bind 127.0.0.1
 loglevel verbose
 logfile stdout
-syslog-enabled no
+# syslog-enabled no
 
 rdbcompression yes
 dbfilename db/test.rdb
