using custom redis.yml (copy default one and adjust to your needs)

--- a/config/redis-test.conf
+++ b/config/redis-test.conf
@@ -1,4 +1,7 @@
+# You can start separate redis-server for tests if you want
 # Redis configuration file example
+# Than run it like this:
+# redis-server config/redis-test.conf
 
 dir ./
 daemonize no
