--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
 [submodule "app-node/socket.io"]
-	path = app-node/socket.io
-	url = git://github.com/LearnBoost/Socket.IO-node.git
+  path = app-node/socket.io
+  url = git://github.com/LearnBoost/Socket.IO-node.git
 [submodule "app-node/node_redis"]
-	path = app-node/node_redis
-	url = git://github.com/mranney/node_redis.git
+  path = app-node/node_redis
+  url = git://github.com/mranney/node_redis.git
+[submodule "app-node/underscore"]
+  path = app-node/underscore
+  url = git://github.com/documentcloud/underscore.git
