added node env variable to setup test environment

--- a/app-node/config.json.example
+++ b/app-node/config.json.example
@@ -1,6 +1,22 @@
 {
-  "username": "node",
-  "password": "secret",
-  "host": "localhost",
-  "port": 3000
+    "default":  {
+        "username": "node",
+        "password": "secret",
+        "host": "localhost",
+        "port": 3000
+    },
+
+    "development": {
+        "username": "node",
+        "password": "secret",
+        "host": "localhost",
+        "port": 3000
+    },
+
+    "test": {
+        "username": "node",
+        "password": "secret",
+        "host": "localhost",
+        "port": 3666
+    }
 }
